--- a/version1/CMakeLists.txt
+++ b/version1/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(version1 main.cpp Foo.h Foo.cpp)
 
-target_compile_features(version1 PRIVATE cxx_std_20)
+# target_compile_features(version1 PRIVATE cxx_std_20)
